<resources>
    <string name="app_name">COMP4200</string>
    <string name="placeholder_username">Placeholder Username</string>
    <string name="looking_for_something">Looking for something?</string>
    <string name="todo">TODO</string>
    <string name="placeholder_description">This is some placeholder text for the description of a post that the user gives when posting.</string>
    <string name="what_s_happening">\t\t\t\t\t\t\t\t\t\t\t\t\t\tWhat\'s happening?</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="error_text_placeholder">ERROR TEXT PLACEHOLDER</string>
    <string name="please_sign_in">Please sign in.</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register2">Let\'s get you set up.</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="re_enter_your_password">Re-enter your password.</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="create_a_strong_password">Create a strong password.</string>
    <string name="enter_your_email_address">Enter your email address.</string>
    <string name="create_your_username">Create your username.</string>
    <string name="handle">Create your handle.</string>
    <string name="click_here">Click Here</string>
    <string name="home">Timeline</string>
    <string name="_0">0</string>
    <string name="profile">Profile</string>
    <string name="display_name_missing">Display name missing</string>
    <string name="posted_5_years_ago">Created an unknown time ago</string>
</resources>