<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="200dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:background="#1E1E24">

            <TextView
                android:id="@+id/tvPostUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/placeholder_username"
                android:textColor="#FFF8F0"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPostDesc"
                android:layout_width="291dp"
                android:layout_height="51dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="12dp"
                android:text="@string/placeholder_description"
                android:textColor="#FFF8F0"
                app:layout_constraintBottom_toTopOf="@+id/ivPostPicture"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/ivPostPicture"
                android:layout_width="320dp"
                android:layout_height="180dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="99dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="#726DA8"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/alertDialogIcon"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/ibComment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="92dp"
                android:background="#1E1E24"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivPostPicture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibComment2"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/comment"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/ibComment2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="11dp"
                android:background="#1E1E24"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toStartOf="@+id/ivPostPicture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@drawable/like"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="57dp"
                android:layout_height="59dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="TODO"
                android:outlineAmbientShadowColor="#FFFFFF"
                android:outlineSpotShadowColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_account_circle_24"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>